[package]
name = "from_iter"
version = "1.0.0"
authors = ["printfn <printfn@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "Initialize arrays from iterators"
homepage = "https://github.com/printfn/from_iter"
repository = "https://github.com/printfn/from_iter"
keywords = ["iterator", "array", "FromIterator", "rust", "collect"]
categories = ["rust-patterns", "algorithms", "memory-management"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
